--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "livescore-client",
-  "version": "0.0.1-9",
+  "version": "0.0.3",
   "main": "lib/livescore",
   "description": "livescore-api client",
   "author": "Nicolas Del Valle <nicolas.delvalle@gmail.com>",
@@ -8,7 +8,8 @@
     "lint": "eslint . --ext .js",
     "format": "prettier --write '**/*.{js,json,md}'",
     "format:changed": "pretty-quick",
-    "format:staged": "pretty-quick --staged"
+    "format:staged": "pretty-quick --staged",
+    "test": "jest --coverage"
   },
   "dependencies": {
     "axios": "^0.18.0"
@@ -18,6 +19,7 @@
     "eslint-config-prettier": "2.9.0",
     "eslint-plugin-prettier": "2.6.0",
     "husky": "0.14.3",
+    "jest": "^22.4.3",
     "prettier": "^1.11.1",
     "pretty-quick": "^1.4.1"
   },
